<resources>
    <string name="app_name">RegistrationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Tips</string>
    <string name="phone_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="continue_button_text">Continue</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="password_image_desc">Password image</string>
    <string name="phone_image_desc">Phone image</string>
    <string name="invalid_phone_error">Invalid phone number!</string>
    <string name="save">Save</string>
    <string name="save_error">Could not save data!</string>
</resources>