<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/container_padding"
        tools:context=".fragments.SignInFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/header"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/header_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/icon_margin"
                android:layout_weight="1"
                android:contentDescription="@string/phone_image_desc"
                android:src="@drawable/phone_android_48px" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="phone"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/icon_margin"
                android:layout_weight="1"
                android:contentDescription="@string/password_image_desc"
                android:src="@drawable/key_48px" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/MaterialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/container_padding"
            android:layout_marginStart="@dimen/sign_in_button_margin"
            android:layout_marginEnd="@dimen/sign_in_button_margin"
            android:enabled="false"
            android:text="@string/continue_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="normal"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>